libkuzu/kuzu.h


typedef struct {
    void* _value;
    bool _is_owned_by_cpp;
} kuzu_value;
typedef struct {
    int32_t days;
} kuzu_date_t;
typedef struct {
    int64_t value;
} kuzu_timestamp_ns_t;
typedef struct {
    int64_t value;
} kuzu_timestamp_ms_t;
typedef struct {
    int64_t value;
} kuzu_timestamp_sec_t;
typedef struct {
    int64_t value;
} kuzu_timestamp_tz_t;
typedef struct {
    int64_t value;
} kuzu_timestamp_t;
typedef struct {
    int32_t months;
    int32_t days;
    int64_t micros;
} kuzu_interval_t;
typedef struct {
    void* _query_summary;
} kuzu_query_summary;
typedef struct {
    uint64_t low;
    int64_t high;
} kuzu_int128_t;
typedef enum { KuzuSuccess = 0, KuzuError = 1 } kuzu_state;
KUZU_C_API kuzu_value* kuzu_value_clone(kuzu_value* value);
KUZU_C_API void kuzu_value_copy(kuzu_value* value, kuzu_value* other);
KUZU_C_API void kuzu_value_destroy(kuzu_value* value);
KUZU_C_API kuzu_state kuzu_value_get_list_size(kuzu_value* value, uint64_t* out_result);
KUZU_C_API kuzu_state kuzu_value_get_list_element(kuzu_value* value, uint64_t index,
    kuzu_value* out_value);
KUZU_C_API kuzu_state kuzu_value_get_struct_num_fields(kuzu_value* value, uint64_t* out_result);
KUZU_C_API kuzu_state kuzu_value_get_struct_field_name(kuzu_value* value, uint64_t index,
    char** out_result);
KUZU_C_API kuzu_state kuzu_value_get_struct_field_value(kuzu_value* value, uint64_t index,
    kuzu_value* out_value);
KUZU_C_API kuzu_state kuzu_value_get_map_size(kuzu_value* value, uint64_t* out_result);
KUZU_C_API kuzu_state kuzu_value_get_map_key(kuzu_value* value, uint64_t index,
    kuzu_value* out_key);
KUZU_C_API kuzu_state kuzu_value_get_map_value(kuzu_value* value, uint64_t index,
    kuzu_value* out_value);
KUZU_C_API kuzu_state kuzu_value_get_recursive_rel_node_list(kuzu_value* value,
    kuzu_value* out_value);
KUZU_C_API kuzu_state kuzu_value_get_recursive_rel_rel_list(kuzu_value* value,
    kuzu_value* out_value);
KUZU_C_API kuzu_state kuzu_int128_t_from_string(const char* str, kuzu_int128_t* out_result);
KUZU_C_API kuzu_state kuzu_int128_t_to_string(kuzu_int128_t val, char** out_result);
KUZU_C_API kuzu_state kuzu_value_get_timestamp_tz(kuzu_value* value,
    kuzu_timestamp_tz_t* out_result);
KUZU_C_API kuzu_state kuzu_value_get_interval(kuzu_value* value, kuzu_interval_t* out_result);
KUZU_C_API kuzu_state kuzu_value_get_decimal_as_string(kuzu_value* value, char** out_result);
KUZU_C_API kuzu_state kuzu_value_get_string(kuzu_value* value, char** out_result);
KUZU_C_API kuzu_state kuzu_value_get_blob(kuzu_value* value, uint8_t** out_result);
KUZU_C_API kuzu_state kuzu_value_get_uuid(kuzu_value* value, char** out_result);
KUZU_C_API char* kuzu_value_to_string(kuzu_value* value);
KUZU_C_API kuzu_state kuzu_node_val_get_id_val(kuzu_value* node_val, kuzu_value* out_value);
KUZU_C_API kuzu_state kuzu_node_val_get_label_val(kuzu_value* node_val, kuzu_value* out_value);
KUZU_C_API kuzu_state kuzu_node_val_get_property_size(kuzu_value* node_val, uint64_t* out_value);
KUZU_C_API kuzu_state kuzu_node_val_get_property_name_at(kuzu_value* node_val, uint64_t index,
    char** out_result);
KUZU_C_API kuzu_state kuzu_node_val_get_property_value_at(kuzu_value* node_val, uint64_t index,
    kuzu_value* out_value);
KUZU_C_API kuzu_state kuzu_node_val_to_string(kuzu_value* node_val, char** out_result);
KUZU_C_API kuzu_state kuzu_rel_val_get_id_val(kuzu_value* rel_val, kuzu_value* out_value);
KUZU_C_API kuzu_state kuzu_rel_val_get_src_id_val(kuzu_value* rel_val, kuzu_value* out_value);
KUZU_C_API kuzu_state kuzu_rel_val_get_dst_id_val(kuzu_value* rel_val, kuzu_value* out_value);
KUZU_C_API kuzu_state kuzu_rel_val_get_label_val(kuzu_value* rel_val, kuzu_value* out_value);
KUZU_C_API kuzu_state kuzu_rel_val_get_property_size(kuzu_value* rel_val, uint64_t* out_value);
KUZU_C_API kuzu_state kuzu_rel_val_get_property_name_at(kuzu_value* rel_val, uint64_t index,
    char** out_result);
KUZU_C_API kuzu_state kuzu_rel_val_get_property_value_at(kuzu_value* rel_val, uint64_t index,
    kuzu_value* out_value);
KUZU_C_API kuzu_state kuzu_rel_val_to_string(kuzu_value* rel_val, char** out_result);
KUZU_C_API void kuzu_destroy_string(char* str);
KUZU_C_API void kuzu_destroy_blob(uint8_t* blob);
KUZU_C_API void kuzu_query_summary_destroy(kuzu_query_summary* query_summary);
KUZU_C_API double kuzu_query_summary_get_compiling_time(kuzu_query_summary* query_summary);
KUZU_C_API double kuzu_query_summary_get_execution_time(kuzu_query_summary* query_summary);
KUZU_C_API kuzu_state kuzu_timestamp_ns_to_tm(kuzu_timestamp_ns_t timestamp, struct tm* out_result);
KUZU_C_API kuzu_state kuzu_timestamp_ms_to_tm(kuzu_timestamp_ms_t timestamp, struct tm* out_result);
KUZU_C_API kuzu_state kuzu_timestamp_sec_to_tm(kuzu_timestamp_sec_t timestamp,
    struct tm* out_result);
KUZU_C_API kuzu_state kuzu_timestamp_tz_to_tm(kuzu_timestamp_tz_t timestamp, struct tm* out_result);
KUZU_C_API kuzu_state kuzu_timestamp_to_tm(kuzu_timestamp_t timestamp, struct tm* out_result);
KUZU_C_API kuzu_state kuzu_timestamp_ns_from_tm(struct tm tm, kuzu_timestamp_ns_t* out_result);
KUZU_C_API kuzu_state kuzu_timestamp_ms_from_tm(struct tm tm, kuzu_timestamp_ms_t* out_result);
KUZU_C_API kuzu_state kuzu_timestamp_sec_from_tm(struct tm tm, kuzu_timestamp_sec_t* out_result);
KUZU_C_API kuzu_state kuzu_timestamp_tz_from_tm(struct tm tm, kuzu_timestamp_tz_t* out_result);
KUZU_C_API kuzu_state kuzu_timestamp_from_tm(struct tm tm, kuzu_timestamp_t* out_result);
KUZU_C_API kuzu_state kuzu_date_to_string(kuzu_date_t date, char** out_result);
KUZU_C_API kuzu_state kuzu_date_from_string(const char* str, kuzu_date_t* out_result);
KUZU_C_API kuzu_state kuzu_date_to_tm(kuzu_date_t date, struct tm* out_result);
KUZU_C_API kuzu_state kuzu_date_from_tm(struct tm tm, kuzu_date_t* out_result);
KUZU_C_API void kuzu_interval_to_difftime(kuzu_interval_t interval, double* out_result);
KUZU_C_API void kuzu_interval_from_difftime(double difftime, kuzu_interval_t* out_result);
KUZU_C_API char* kuzu_get_version();
KUZU_C_API uint64_t kuzu_get_storage_version();