KuzuDot/Native/NativeMethods.cs


        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_value_get_timestamp_tz(IntPtr value, out KuzuTimestampTz outResult);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_value_get_interval(IntPtr value, out KuzuInterval outResult);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_value_get_string(IntPtr value, out IntPtr outResult);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_value_get_blob(IntPtr value, out IntPtr outResult);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_value_get_decimal_as_string(IntPtr value, out IntPtr outResult);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_value_get_uuid(IntPtr value, out IntPtr outResult);

        // List/Array functions
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_value_get_list_size(IntPtr value, out ulong outResult);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_value_get_list_element(IntPtr value, ulong index, out KuzuValue outValue);

        // Struct functions
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_value_get_struct_num_fields(IntPtr value, out ulong outResult);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_value_get_struct_field_name(IntPtr value, ulong index, out IntPtr outResult);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_value_get_struct_field_value(IntPtr value, ulong index, out KuzuValue outValue);

        // Map functions
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_value_get_map_size(IntPtr value, out ulong outResult);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_value_get_map_key(IntPtr value, ulong index, out KuzuValue outKey);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_value_get_map_value(IntPtr value, ulong index, out KuzuValue outValue);

        // Recursive rel functions
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_value_get_recursive_rel_node_list(IntPtr value, out KuzuValue outValue);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_value_get_recursive_rel_rel_list(IntPtr value, out KuzuValue outValue);

        // Node value helpers
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_node_val_get_id_val(IntPtr nodeVal, out KuzuValue outValue);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_node_val_get_label_val(IntPtr nodeVal, out KuzuValue outValue);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_node_val_get_property_size(IntPtr nodeVal, out ulong outValue);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_node_val_get_property_name_at(IntPtr nodeVal, ulong index, out IntPtr outResult);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_node_val_get_property_value_at(IntPtr nodeVal, ulong index, out KuzuValue outValue);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_node_val_to_string(IntPtr nodeVal, out IntPtr outResult);

        // Rel value helpers
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_rel_val_get_id_val(IntPtr relVal, out KuzuValue outValue);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_rel_val_get_src_id_val(IntPtr relVal, out KuzuValue outValue);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_rel_val_get_dst_id_val(IntPtr relVal, out KuzuValue outValue);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_rel_val_get_label_val(IntPtr relVal, out KuzuValue outValue);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_rel_val_get_property_size(IntPtr relVal, out ulong outValue);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_rel_val_get_property_name_at(IntPtr relVal, ulong index, out IntPtr outResult);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_rel_val_get_property_value_at(IntPtr relVal, ulong index, out KuzuValue outValue);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_rel_val_to_string(IntPtr relVal, out IntPtr outResult);

        // Value utility functions
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr kuzu_value_clone(IntPtr value);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void kuzu_value_copy(IntPtr value, IntPtr other);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void kuzu_value_destroy(IntPtr value);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr kuzu_value_to_string(IntPtr value);

        // Int128 utility functions
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
        internal static extern KuzuState kuzu_int128_t_from_string([MarshalAs(UnmanagedType.LPStr)] string str, out KuzuInt128 outResult);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_int128_t_to_string(KuzuInt128 val, out IntPtr outResult);

        // Date utility functions
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_date_to_string(KuzuDate date, out IntPtr outResult);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
        internal static extern KuzuState kuzu_date_from_string([MarshalAs(UnmanagedType.LPStr)] string str, out KuzuDate outResult);

        // Timestamp/date <-> tm conversion
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_timestamp_ns_to_tm(KuzuTimestampNs timestamp, out KuzuTm outResult);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_timestamp_ms_to_tm(KuzuTimestampMs timestamp, out KuzuTm outResult);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_timestamp_sec_to_tm(KuzuTimestampSec timestamp, out KuzuTm outResult);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_timestamp_tz_to_tm(KuzuTimestampTz timestamp, out KuzuTm outResult);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_timestamp_to_tm(KuzuTimestamp timestamp, out KuzuTm outResult);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_timestamp_ns_from_tm(KuzuTm tm, out KuzuTimestampNs outResult);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_timestamp_ms_from_tm(KuzuTm tm, out KuzuTimestampMs outResult);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_timestamp_sec_from_tm(KuzuTm tm, out KuzuTimestampSec outResult);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_timestamp_tz_from_tm(KuzuTm tm, out KuzuTimestampTz outResult);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_timestamp_from_tm(KuzuTm tm, out KuzuTimestamp outResult);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_date_to_tm(KuzuDate date, out KuzuTm outResult);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern KuzuState kuzu_date_from_tm(KuzuTm tm, out KuzuDate outResult);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void kuzu_interval_to_difftime(KuzuInterval interval, out double outResult);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void kuzu_interval_from_difftime(double diffTime, out KuzuInterval outResult);

        // QuerySummary functions
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void kuzu_query_summary_destroy(ref KuzuQuerySummary querySummary);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern double kuzu_query_summary_get_compiling_time(ref KuzuQuerySummary querySummary);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern double kuzu_query_summary_get_execution_time(ref KuzuQuerySummary querySummary);

        // String and memory management
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void kuzu_destroy_string(IntPtr str);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void kuzu_destroy_blob(IntPtr blob);

        // Version functions
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr kuzu_get_version();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ulong kuzu_get_storage_version();
    }
}